# ORIENT

./: README.md
Dataset collection/ProcessRosbag/: makeVideo.m  plotBag.m  readme.md  sortVectors.m
Drafts/: createCustomBody.m  generateFrames.m  makeGIF.m  plotDatasetResults.m  plotESimResults.m  processROS.m  rotationInterpolation.m  sendIMUmsg.m  testRigidTransforms.m  testRosbagFeedback_12_07.mat
Hardware/: readme.md
Hardware/Calibration example (Kalibr)/: README  camchain-imucam-dynamic.yaml  commands.txt  imu_LPMS_CU.yaml  results-cam-static.txt  results-imucam-dynamic.txt
Hardware/Kinova Gen3/: README.md
Hardware/Kinova Gen3/Trajectory planning/Kortex_api_2.2.1/mex-wrapper/src/example_model/: CMakeLists.txt  package.xml  packageInfo.mat
Hardware/Kinova Gen3/Trajectory planning/Kortex_api_2.2.1/mex-wrapper/src/example_model/include/client_stubs/: BaseClientRpc.h  ControlConfigClientRpc.h
Hardware/Kinova Gen3/Trajectory planning/Kortex_api_2.2.1/mex-wrapper/src/example_model/include/common/: Frame.h  version.h
Hardware/Kinova Gen3/Trajectory planning/Kortex_api_2.2.1/mex-wrapper/src/example_model/include/example_model/: ActionNotificationManager.h  ArmBaseApi.h  IArmBaseApi.h  MW_target_hardware_resources.h  SimplifiedApi.h  TrajectoryNotificationManager.h  TrajectoryState.h  coder_posix_time.h  example_model.h  example_model_private.h  example_model_pubsub_common.h  example_model_types.h  kortex_wrapper_data.h  proto_converter.h  ros2nodeinterface.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.h  slros_msgconvert_utils.h  visibility_control.h
Hardware/Kinova Gen3/Trajectory planning/Kortex_api_2.2.1/mex-wrapper/src/example_model/include/messages/: ActuatorConfig.pb.h  Base.pb.h  ControlConfig.pb.h  Errors.pb.h  Frame.pb.h  GripperCyclicMessage.pb.h
Hardware/Kinova Gen3/Trajectory planning/Kortex_api_2.2.1/mex-wrapper/src/example_model/src/: example_model_data.cpp  kortexApiWrapper.cpp  main.cpp  ros2nodeinterface.cpp  slros_busmsg_conversion.cpp
Hardware/OptiTrack/: README.md  commandsOptiTrack.txt
Help repos/LpSensor-1.3.4-Linux-x86-64/: README  liblpsensor-1.3.4-Linux.deb
Kinova Gen3/: README.md
MATLAB (main)/: log.txt
MATLAB (main)/Fusion/: IMU_noise_param.txt  camParameters.txt  correctOffset.m  extrinsics.txt  featureDetAndTrack.m  initORBSLAM.m  init_IMU_CAM.m  kinovaSim.m  stateStruct.m
MATLAB (main)/Fusion_ESim_29_09_2021/: mainExperiment_define_obsTimes.m  mainExperiment_init_IMU.m  mainExperiment_init_IMU_v2.m  mainExperiment_init_orbSlam.m  mainExperiment_init_state_camera.m  mainExperiment_loop.m  mainScript.m  trackerTest.m
MATLAB (main)/Fusion_Kinova_29_09_2021/: mainExperiment_2.m  mainExperiment_init_IMU_v2.m  (+7 more)
OptiTrack/: README.md
(+241 files in other folders)
